Fix bug with detail pane not showing
Resize detail pane close button

--- a/src/app/find/icon-detail/icon-detail.component.scss
+++ b/src/app/find/icon-detail/icon-detail.component.scss
@@ -3,8 +3,7 @@ app-icon {
 }
 
 ion-button {
-  font-size: 2rem;
-  line-height: 2;
+  font-size: 1em;
 }
 
 .suggestions li {
